Prevent width flickering in thread

--- a/app/stylesheets/less/blocks/messages.less
+++ b/app/stylesheets/less/blocks/messages.less
@@ -413,6 +413,7 @@
 
 // Messages Section
 .messages__section {
+  width: 100%;
   height: 100%;
   padding-top: 43px;
   position: relative;
